--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 node_modules/
+.gitignore
 
 # Expo
 .expo/
@@ -33,3 +34,5 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
+%ProgramData%
